--- a/video.html
+++ b/video.html
@@ -6,6 +6,5 @@
     <title>Document</title>
 </head>
 <body>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/6LhnYO6wvf4?si=8_KXKPEZbhYxrAew" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-</body>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/6ojkPE1htpk?si=6skjwHM5rLTBWu29" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </html>
