--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>helllo</h1</h1
+    <h1>Мои любимые футболисты</h1>
+    <p>
+        Рона́лду ди Аси́с Море́йра[7] (порт.-браз. Ronaldo de Assis Moreira; род. 21 марта 1980[1][2][…], Порту-Алегри[3]), более известный как Роналди́ньо (порт.-браз. Ronaldinho) и Роналди́ньо Гау́шо[8] (порт.-браз. Ronaldinho Gaúcho) — бразильский футболист, выступал на позиции атакующего полузащитника и нападающего. Чемпион мира (2002). Обладатель «Золотого мяча» (2005). Лучший футболист мира по версии ФИФА в 2004 и 2005 годах.
+
+Выступал за бразильские клубы «Гремио», «Фламенго», «Атлетико Минейро», «Флуминенсе», французский «Пари Сен-Жермен», испанскую «Барселону», итальянский «Милан», мексиканский «Керетаро».
+    </p>
+    <p>
+        Лионе́ль Андре́с Ме́сси Куччитти́ни[a] (исп. Lionel Andrés Messi Cuccittini, испанское произношение: [ljoˈnel anˈdɾez ˈmesi] (слушать)о файле; родился 24 июня 1987, Росарио, Аргентина) — аргентинский футболист, нападающий и капитан клуба MLS «Интер Майами», капитан сборной Аргентины. Чемпион мира, чемпион Южной Америки, победитель Финалиссимы, олимпийский чемпион. Считается одним из лучших футболистов всех времён[7][8][9].
+
+        Лучший бомбардир в истории чемпионата Испании, «Барселоны» и сборной Аргентины. Восьмикратный обладатель «Золотого мяча»[b], шестикратный — «Золотой бутсы». Воспитанник академии «Барселоны», вместе с этим клубом выиграл десять титулов чемпиона Испании, четыре Лиги чемпионов УЕФА, семь Кубков Испании, восемь Суперкубков Испании, три Суперкубка Европы и три чемпионата мира среди клубов. Двукратный чемпион Франции и обладатель Суперкубка Франции в составе «Пари Сен-Жермен».
+    </p>
+    <p>
+        Хе́ндрик Йо́ханнес (Йо́хан) Кройф[a] (нидерл. Hendrik Johannes (Johan) Cruijff, нидерландское произношение: [ˈjoːɦɑn ˈkrœyf] (слушать)о файле; 25 апреля 1947, Амстердам — 24 марта 2016, Барселона) — нидерландский футболист и тренер. В качестве игрока в основном выступал на атакующих позициях, став первым трёхкратным обладателем «Золотого мяча» и других наград. Считается одним из лучших футболистов и тренеров в истории футбола[6][7][8]. Персона Кройфа ассоциируется со стилем игры под названием «тотальный футбол»
+    </p>
 </body>
 </html>
