--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Мои любимые футболисты</h1>
+    <a href="видео.html">видео</a>
     <p>
         Рона́лду ди Аси́с Море́йра[7] (порт.-браз. Ronaldo de Assis Moreira; род. 21 марта 1980[1][2][…], Порту-Алегри[3]), более известный как Роналди́ньо (порт.-браз. Ronaldinho) и Роналди́ньо Гау́шо[8] (порт.-браз. Ronaldinho Gaúcho) — бразильский футболист, выступал на позиции атакующего полузащитника и нападающего. Чемпион мира (2002). Обладатель «Золотого мяча» (2005). Лучший футболист мира по версии ФИФА в 2004 и 2005 годах.
 
